fix(youtube): only use important on background and color on mobile

--- a/styles/youtube/catppuccin.user.less
+++ b/styles/youtube/catppuccin.user.less
@@ -1377,17 +1377,17 @@
 
 @-moz-document domain("m.youtube.com") {
   html[darker-dark-theme] {
-    #catppuccin(@darkFlavor) !important;
+    #catppuccin(@darkFlavor);
   }
   html {
-    #catppuccin(@lightFlavor) !important;
+    #catppuccin(@lightFlavor);
   }
 
   #catppuccin(@flavor) {
     #lib.palette();
 
-    background-color: @base;
-    color: @text;
+    background-color: @base !important;
+    color: @text !important;
 
     /* Ambient mode */
     #cinematics {
